feat(card component): add final card component structure

--- a/src/app/modules/weather/components/weather-card/weather-card.component.html
+++ b/src/app/modules/weather/components/weather-card/weather-card.component.html
@@ -27,6 +27,38 @@
           {{ weatherDataInput.main.temp_min }}
         </div>
       </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="maxTemperatureIcon"></fa-icon>
+          <span>Máxima</span>
+        </div>
+        <div class="info-block-value">
+          {{ weatherDataInput.main.temp_max | number: "1.0-0" }}°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="humidityIcon"></fa-icon>
+          <span>Humidade</span>
+        </div>
+
+        <div class="info-block-value">
+          {{ weatherDataInput.main.humidity }}%
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="windIcon"></fa-icon>
+          <span>Vento</span>
+        </div>
+
+        <div class="info-block-value">
+          {{ weatherDataInput.wind.speed }} km/h
+        </div>
+      </div>
     </div>
   </div>
 </div>
