--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Montserrat&display=swap');
+
 :root {
   --blue-1: #2242c2;
   --blue-2: #0368ec;
+  --dark-1: #1d1919;
+  --dark-2: #352e2e;
   --white: #fff;
   --grey-1: #ededed;
   --shadow-dark: rgba(0, 0, 0, 0.3);
@@ -15,11 +18,11 @@
 }
 
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Montserrat', Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
   width: 100%;
   height: 100%;
-  background-color: var(--blue-1);
+  background-color: var(--dark-1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,7 +35,7 @@ fa-icon {
 .container {
   width: 500px;
   height: 80vh;
-  background-color: var(--blue-2);
+  background-color: var(--dark-2);
   border-radius: 20px;
   box-shadow: 10px 10px 10px var(--shadow-dark);
   margin-top: 3rem;
@@ -45,6 +48,14 @@ fa-icon {
   height: 50%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .lower-data {
@@ -58,14 +69,6 @@ fa-icon {
   flex-direction: column;
 }
 
-.upper-data img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 .weather-data {
   position: relative;
   z-index: 1;
@@ -76,6 +79,7 @@ fa-icon {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  letter-spacing: 5px;
 }
 
 .location {
@@ -104,14 +108,8 @@ fa-icon {
 .more-info-container {
   flex: 1;
   background-color: var(--shadow-dark);
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 1em;
-  margin-right: 1em;
+  border-radius: 20px;
+  margin: 1em;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -131,12 +129,12 @@ fa-icon {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
 
-.info-block-label span {
-  color: var(--white);
-  font-size: 0.8em;
-  margin-top: 0.4em;
+  span {
+    color: var(--white);
+    font-size: 0.8em;
+    margin-top: 0.4em;
+  }
 }
 
 .info-block-value {
@@ -150,19 +148,20 @@ fa-icon {
 .search {
   margin-top: 2em;
   text-align: center;
+
+  input {
+    background-color: var(--shadow-dark);
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    padding: 1em;
+    color: #fff;
+    font-size: 0.8em;
+    text-align: center;
+    width: 70%;
+  }
 }
 
-.search input {
-  background-color: var(--shadow-dark);
-  outline: none;
-  border: none;
-  border-radius: 20px;
-  padding: 1em;
-  color: #fff;
-  font-size: 0.8em;
-  text-align: center;
-  width: 70%;
-}
 .search-icon {
   margin-left: 1em;
 }
